--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,16 +17,16 @@ jobs:
         node-version: [20.14.0]
 
     steps:
-      - name: Checkout repository
+      - name: Checkout respositorio
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
+      - name: Seta o Node.js
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: Install dependencies
+      - name: Instala as dependencias
         run: npm install
 
-      - name: Run tests
-        run: npm test
+      - name: Roda os testes
+        run: npx jest
